Commit agregando documentos SCSS

--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -1,3 +1,12 @@
-p {
-    background-color: black;
+nav {
+    background-image: linear-gradient(to right, #888888,#ffffff);
+    padding: 1rem;
+        
+}
+.navbar-brand {
+    color: #2b2b2be1;
+    text-shadow: 3px 3px 7px #ffffff;
+    font-family: 'Fredoka One', sans-serif;
+    font-size: 2rem;
+    
 }
