--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,137 @@
-p {
-  background-color: black; }
+nav {
+  background-image: linear-gradient(to right, #888888, #ffffff);
+  padding: 1rem; }
+
+.navbar-brand {
+  color: #2b2b2be1;
+  text-shadow: 3px 3px 7px #ffffff;
+  font-family: 'Fredoka One', sans-serif;
+  font-size: 2rem; }
+
+.headerIndex {
+  /*Estilos de area wrapper general*/
+  grid-area: header;
+  /*Estilos custom de seccion*/
+  justify-content: space-around;
+  align-items: center;
+  display: grid;
+  grid-template-columns: min-content;
+  grid-template-rows: min-content;
+  padding: 10px;
+  grid-template-areas: "sectionTecnico sectionPresentacion" "sectionParrafo sectionParrafo" "sectionFlechas sectionFlechas" "sectionSeleccionDispositivo sectionSeleccionDispositivo"; }
+  .headerIndex .sectionTecnico {
+    grid-area: sectionTecnico; }
+    .headerIndex .sectionTecnico .tecnico {
+      height: 25rem;
+      width: 14rem; }
+  .headerIndex .sectionPresentacion {
+    color: #ffffffec;
+    font-family: 'Fredoka One', sans-serif;
+    grid-area: sectionPresentacion;
+    font-size: 0.8rem;
+    box-sizing: border-box;
+    text-shadow: 2px 2px 3.5px #ff5e00; }
+  .headerIndex .sectionParrafo {
+    grid-area: sectionParrafo;
+    color: #ffffffec;
+    font-family: 'Fredoka One', sans-serif;
+    font-size: 1.5rem;
+    box-sizing: border-box;
+    text-shadow: 2px 2px 3.5px #ff5e00; }
+    .headerIndex .sectionParrafo #bottom {
+      color: #ffffffec;
+      font-size: 2rem; }
+
+.sectionFlechas {
+  grid-area: sectionFlechas;
+  display: block;
+  margin: 0 auto;
+  box-sizing: border-box;
+  text-shadow: 4px 4px 7px #ff5e00; }
+
+.botonStart {
+  display: none; }
+
+.seleccionDeDispositivo {
+  grid-area: sectionSeleccionDispositivo;
+  color: #ffffffec;
+  font-family: 'Fredoka One', sans-serif;
+  font-size: 1.5rem;
+  box-sizing: border-box;
+  text-shadow: 2px 2px 3.5px #ff5e00; }
+
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none; }
+
+html {
+  height: 100%;
+  width: 100%; }
+
+body {
+  background-color: #0f0f0f;
+  background-image: url(../public/image/fondoherramientas2.png);
+  background-repeat: repeat;
+  background-size: 26rem;
+  justify-content: center; }
+
+.aireAcondicionado, .desktop, .notebook, .proximamente, .proximamente2, .proximamente3 {
+  border: none; }
+
+.mainIndex {
+  grid-area: main;
+  display: grid;
+  grid-template-areas: "aireAcondicionado" "desktop" "notebook" "proximamente" "proximamente2" "proximamente3";
+  justify-content: center;
+  flex-wrap: wrap; }
+  .mainIndex .aireAcondicionado {
+    grid-area: aireAcondicionado; }
+  .mainIndex .desktop {
+    grid-area: desktop; }
+  .mainIndex .notebook {
+    grid-area: notebook; }
+  .mainIndex .proximamente {
+    grid-area: proximamente; }
+  .mainIndex .proximamente2 {
+    grid-area: proximamente2; }
+  .mainIndex .proximamente3 {
+    grid-area: proximamente3; }
+
+.producto {
+  font-size: 1.5rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  margin: 1.5rem;
+  background-color: #f8f8f873;
+  box-shadow: 3px 3px 5px  #b8b8b8; }
+  .producto .parrafoProducto {
+    color: #ffffffec;
+    font-size: 1.2rem; }
+  .producto .imagenes {
+    height: 16rem;
+    width: 16rem; }
+
+/*+++++++++Estilos Footer Index Mobile+++++++++++*/
+footer {
+  grid-area: footer;
+  text-decoration: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+  position: fixed;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  justify-items: center;
+  align-items: center;
+  left: 0px;
+  bottom: 0px;
+  height: 45px;
+  width: 100%;
+  background-color: #cacacaee; }
+  footer section {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-around; }
