Agregando estilos a aireAcondicionado

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -23,3 +23,9 @@ footer {
     }
 }
 
+/*+++++++++++++Estilos Footer aireAcondicionado+++++++++++++++*/
+
+.footerAire {
+    grid-area: footerAire;
+    position:fixed;
+}
