--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -1,3 +1,5 @@
+/*++++++++++++++Estilos Nav Index++++++++++++*/
+
 nav {
     background-image: linear-gradient(to right, #888888,#ffffff);
     padding: 1rem;
@@ -10,3 +12,17 @@ nav {
     font-size: 2rem;
     
 }
+
+/*++++++++++++++Estilos Nav aireAcondicionado++++++++++++*/
+.navbar {
+     .navbar-expand-lg{
+        .navbar-light{
+             .bg-light{
+
+                 grid-area: navAire;
+
+                 }
+            }
+        }  
+}
+
