--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*++++++++++++++Estilos Nav Index++++++++++++*/
 nav {
   background-image: linear-gradient(to right, #888888, #ffffff);
   padding: 1rem; }
@@ -8,6 +9,11 @@ nav {
   font-family: 'Fredoka One', sans-serif;
   font-size: 2rem; }
 
+/*++++++++++++++Estilos Nav aireAcondicionado++++++++++++*/
+.navbar .navbar-expand-lg .navbar-light .bg-light {
+  grid-area: navAire; }
+
+/*++++++++++++++++Estilos Header Index+++++++++++++++++*/
 .headerIndex {
   /*Estilos de area wrapper general*/
   grid-area: header;
@@ -60,6 +66,35 @@ nav {
   box-sizing: border-box;
   text-shadow: 2px 2px 3.5px #ff5e00; }
 
+/*++++++++++++Estilos Header aireAcondicionado+++++++++++++*/
+.headerAire {
+  grid-area: headerAire; }
+  .headerAire .tituloAire {
+    color: #ffffffec;
+    text-shadow: 3px 3px 7px #ff5e00;
+    font-size: 2.5rem;
+    text-align: center;
+    padding: 15px; }
+  .headerAire .esquemaAire {
+    padding: 0.5rem;
+    margin: 1rem;
+    box-shadow: 3px 2px 7px #c46a04;
+    background-color: #f0f8ffe5;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap; }
+    .headerAire .esquemaAire .subtituloAire {
+      color: #000000;
+      text-shadow: 3px 3px 7px #ff5e00;
+      font-size: 1.5rem; }
+    .headerAire .esquemaAire .partesAire {
+      font-size: 0.9rem; }
+    .headerAire .esquemaAire .videoHeader {
+      height: 9rem;
+      width: 16rem; }
+
+/*++++++++++Estilos body Index++++++++++++*/
 * {
   margin: 0;
   padding: 0;
@@ -76,6 +111,15 @@ body {
   background-size: 26rem;
   justify-content: center; }
 
+/*++++++++++Estilos body aireAcondicionado++++++++++++*/
+.bodyAires {
+  background-color: #000000;
+  background-image: url(../public/image/fondoAireAcondicionado2.png);
+  background-repeat: repeat;
+  background-size: 26rem;
+  justify-content: center; }
+
+/*++++++++++++++++Estilos Main Index++++++++++++++++++*/
 .aireAcondicionado, .desktop, .notebook, .proximamente, .proximamente2, .proximamente3 {
   border: none; }
 
@@ -116,6 +160,76 @@ body {
     height: 16rem;
     width: 16rem; }
 
+/*+++++++++++++Estilos Main aireAcondicionado++++++++++++++*/
+.mainAire {
+  grid-area: mainAire; }
+  .mainAire .fallasAire {
+    margin: 1rem;
+    padding: 0.5rem;
+    box-shadow: 3px 3px 7px #7488e2;
+    background-color: #f0f8ffe5; }
+    .mainAire .fallasAire .partesAire {
+      font-size: 1rem; }
+    .mainAire .fallasAire .subtituloMainAire {
+      text-align: center;
+      font-size: 2rem;
+      color: #000000;
+      text-shadow: 3px 3px 7px #ff5e00; }
+    .mainAire .fallasAire .pMarcas {
+      font-size: 1rem;
+      margin-bottom: 0.5rem; }
+      .mainAire .fallasAire .pMarcas p {
+        margin-bottom: 0rem; }
+  .mainAire .sectionFallas {
+    flex-wrap: wrap;
+    justify-content: center;
+    display: grid;
+    grid-template-areas: "divFalla1 divFalla2" "divFalla3 divFalla4" "divFalla5 divFalla6" "divFalla7 divFalla7"; }
+    .mainAire .sectionFallas div {
+      display: grid;
+      justify-content: center;
+      align-content: center;
+      padding: 0.5rem;
+      margin: 0.5rem;
+      background-color: #f8f8f89c;
+      box-shadow: 3px 2px 15px #302d2a; }
+      .mainAire .sectionFallas div .imagenAireGoteando {
+        padding: 0.25rem;
+        margin: 0.25rem;
+        width: 5.2rem;
+        height: 5.2rem;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center; }
+      .mainAire .sectionFallas div .textArea {
+        height: 7rem;
+        width: 7rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; }
+    .mainAire .sectionFallas .divFalla1 {
+      grid-area: divFalla1; }
+    .mainAire .sectionFallas .divFalla2 {
+      grid-area: divFalla2; }
+    .mainAire .sectionFallas .divFalla3 {
+      grid-area: divFalla3; }
+    .mainAire .sectionFallas .divFalla4 {
+      grid-area: divFalla4; }
+    .mainAire .sectionFallas .divFalla5 {
+      grid-area: divFalla5; }
+    .mainAire .sectionFallas .divFalla6 {
+      grid-area: divFalla6; }
+    .mainAire .sectionFallas .divFalla7 {
+      grid-area: divFalla7; }
+    .mainAire .sectionFallas .botonNext {
+      height: 12rem;
+      width: 12rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+
 /*+++++++++Estilos Footer Index Mobile+++++++++++*/
 footer {
   grid-area: footer;
@@ -135,3 +249,8 @@ footer {
     flex-wrap: wrap;
     display: flex;
     justify-content: space-around; }
+
+/*+++++++++++++Estilos Footer aireAcondicionado+++++++++++++++*/
+.footerAire {
+  grid-area: footerAire;
+  position: fixed; }
