--- a/scss/body.scss
+++ b/scss/body.scss
@@ -1,3 +1,5 @@
+/*++++++++++Estilos body Index++++++++++++*/
+
 *{
     margin: 0;
     padding: 0;
@@ -19,4 +21,17 @@ body {
     justify-content: center;
     
 }
+
+
+/*++++++++++Estilos body aireAcondicionado++++++++++++*/
+
+.bodyAires {
+    background-color: #000000;
+    background-image: url(../public/image/fondoAireAcondicionado2.png); 
+    background-repeat: repeat;
+    background-size: 26rem;
+    justify-content: center;
+
+
     
+}
