--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -29,3 +29,10 @@ footer {
     grid-area: footerAire;
     position:fixed;
 }
+
+/*+++++++++++++Estilos Footer Notebook+++++++++++++++*/
+
+.footerNotebook {
+    grid-area: footerNotebook;
+    position:fixed;
+}
