--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -26,3 +26,15 @@ nav {
         }  
 }
 
+/*++++++++++++++Estilos Nav Notebooks++++++++++++*/
+.navbar {
+    .navbar-expand-lg{
+       .navbar-light{
+            .bg-light{
+
+                grid-area: navNotebook;
+
+                }
+           }
+       }  
+}
