--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,3 +1,5 @@
 $color-texto-gral: #ffffffec;
+$color-texto-secundario: #000000;
 $color-sombras-index: #ff5e00;
+$color-sombras-notebook: #ff0000;
 $fuentes-sub-titulos: sanserif;
