--- a/scss/body.scss
+++ b/scss/body.scss
@@ -31,7 +31,15 @@ body {
     background-repeat: repeat;
     background-size: 26rem;
     justify-content: center;
+}
 
 
-    
+/*+++++++++++++Estilos body notebook+++++++++++++++*/
+
+.bodyNotebook {
+    background-color: #000000;
+    background-image: url(../public/image/fondoNotebook2.png); 
+    background-repeat: repeat;
+    background-size: 26rem;
+    justify-content: center;
 }
