--- a/scss/header.scss
+++ b/scss/header.scss
@@ -100,8 +100,8 @@
             flex-wrap: wrap;
 
                 .subtituloAire {
-                    color: #000000;
-                    text-shadow: 3px 3px 7px #ff5e00;
+                    color: $color-texto-secundario;
+                    text-shadow: 3px 3px 7px $color-sombras-index;
                     font-size: 1.5rem;  
                     
                 }
@@ -110,13 +110,54 @@
                     font-size: 0.9rem;
                     
                 }
-                .videoHeader{
+                .videoHeaderAire{
                     height: 9rem;
                     width: 16rem;
                 }
             
         }
     }
+
+/*++++++++++++Estilos Header notebook+++++++++++++*/
+
+.headerNotebook {
+    grid-area: headerNotebook; 
+
+    .tituloNotebook {
+        color: $color-texto-gral;
+        text-shadow: 3px 3px 7px $color-sombras-notebook;
+        font-size: 2.5rem;
+        text-align: center;
+        padding: 15px;
+    }
+
+    .esquemaNotebook {
+        padding: 0.5rem;
+        margin: 1rem;
+        box-shadow: 3px 2px 7px #ff000083; 
+        background-color: #f0f8ffe5;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
+
+        .subtituloNotebook {
+            color: $color-texto-secundario;
+            text-shadow: 3px 3px 7px $color-sombras-notebook;
+            font-size: 1.5rem;
+                
+        }
+
+        .partesNotebook {
+            font-size: 0.9rem;
+        }
+
+        .videoHeaderNotebook{
+            height: 9rem;
+            width: 16rem;
+        }
+    }
+}
 
 
 
