--- a/scss/body.scss
+++ b/scss/body.scss
@@ -43,3 +43,13 @@ body {
     background-size: 26rem;
     justify-content: center;
 }
+
+/*+++++++++++++Estilos body pcDesktop+++++++++++++++*/
+
+.bodyDesktop {
+    background-color: #000000;
+    background-image: url(../public/image/fondoPcGamer.png); 
+    background-repeat: repeat;
+    background-size: 26rem;
+    justify-content: center;
+}
