--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -38,3 +38,16 @@ nav {
            }
        }  
 }
+
+/*++++++++++++++Estilos Nav pcDesktop++++++++++++*/
+.navbar {
+    .navbar-expand-lg{
+       .navbar-light{
+            .bg-light{
+
+                grid-area: navDesktop;
+
+                }
+           }
+       }  
+}
