--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,4 +2,8 @@ $color-texto-gral: #ffffffec;
 $color-texto-secundario: #000000;
 $color-sombras-index: #ff5e00;
 $color-sombras-notebook: #ff0000;
+$color-sombras-pcdesktop: #594bdb;
+$color-sombras-cuadros-aire: #c36a04;
+$color-sombras-cuadros-notebook:#ff000063;
+$color-sombras-cuadros-pcdesktop:#68e1ffee;
 $fuentes-sub-titulos: sanserif;
