--- a/scss/header.scss
+++ b/scss/header.scss
@@ -21,8 +21,8 @@
         grid-area: sectionTecnico;
 
         .tecnico {
-            height: 25rem;
-            width: 14rem;
+            height: 23rem;
+            width: 13rem;
         }
         
     }
@@ -30,9 +30,12 @@
         color: $color-texto-gral;
         font-family: 'Fredoka One', sans-serif;
         grid-area: sectionPresentacion;
-        font-size: 0.8rem;
         box-sizing: border-box;
         text-shadow: 2px 2px 3.5px $color-sombras-index;
+        
+        h1{
+            font-size: 1.2rem;
+        }
     }
     .sectionParrafo{
         grid-area: sectionParrafo;
@@ -41,6 +44,8 @@
         font-size: 1.5rem;
         box-sizing: border-box;
         text-shadow: 2px 2px 3.5px $color-sombras-index; 
+        padding-top: 6rem;
+        padding-left: 1rem;
 
         #bottom{
             color: $color-texto-gral;
@@ -55,6 +60,7 @@
     
     grid-area: sectionFlechas;
     display: block;
+    padding-top: 2rem;
     margin: 0 auto;
     box-sizing: border-box;
     text-shadow: 4px 4px 7px $color-sombras-index;
@@ -279,6 +285,62 @@
                 
                 color: #ffffff;
             }
+        }
+    }
+
+}
+
+
+
+/*-----------------Medias Queries-------------------*/
+
+    /*+-+-+-+-Estilos hasta 768px-+--+-+-+-*/
+
+        /*++++Index++++*/
+@media screen and (min-width: 768px) {
+
+
+    .headerIndex{
+        display: grid;
+        grid-template-areas: 
+        "sectionTecnico sectionPresentacion"
+        "sectionTecnico sectionParrafo"
+        "sectionFlechas sectionFlechas"
+        "seleccionDeDispositivo seleccionDeDispositivo";
+
+        .sectionTecnico{
+            grid-area: sectionTecnico;
+            padding-left: 5rem;
+        }
+
+        .sectionPresentacion{
+            grid-area: sectionPresentacion;
+            padding-top: 3rem;
+            padding-left: 2rem;
+
+            h1{
+                font-size: 1.7rem;
+            }
+        }
+
+        .sectionParrafo{
+            grid-area: sectionParrafo;
+            padding-bottom: 3rem;
+            padding-left: 2rem;
+
+            #bottom{
+                    font-size: 1.5rem;
+                } 
+        }
+
+        .sectionFlechas {
+            grid-area: sectionFlechas;
+        }
+
+        .seleccionDeDispositivo{
+            grid-area: seleccionDeDispositivo;
+            padding-top: 3rem;
+            padding-left: 4.7rem;
         }
     }
 
