--- a/scss/mainContent.scss
+++ b/scss/mainContent.scss
@@ -418,3 +418,68 @@
         }
     }
 }
+
+
+/*-----------------Medias Queries-------------------*/
+
+    /*+-+-+-+-Estilos hasta 768px-+--+-+-+-*/
+
+        /*++++Index++++*/
+@media screen and (min-width: 768px) {
+    
+    .mainIndex {
+        display: grid;
+        grid-template-areas:
+            "aireAcondicionado desktop"
+            "notebook proximamente"
+            "proximamente2 proximamente3"   
+        ;
+        padding-left: 0.2rem;
+        padding-right: 0.2rem;
+        padding-bottom: 5rem;
+        
+        .aireAcondicionado {
+            grid-area: aireAcondicionado;
+            .producto{
+                padding: 1rem;
+            }
+        
+        }
+        .desktop {
+            grid-area: desktop;
+
+            .producto{
+                padding: 1rem;
+                padding-bottom: 2.9rem;
+            }
+        }
+        .notebook {
+            grid-area: notebook;
+            .producto{
+                padding: 1rem;
+            }
+        }
+        .proximamente {
+            grid-area: proximamente;
+
+            .producto{
+                padding: 1rem;
+                padding-bottom: 6.6rem;
+            }
+        }
+        .proximamente2 {
+            grid-area: proximamente2;
+            .producto{
+                padding: 1rem;
+            }
+        }
+        .proximamente3 {
+            grid-area: proximamente3;
+            .producto{
+                padding: 1rem;
+            }
+        }
+    
+    }
+
+}
